plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'be.helha.labos'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}


dependencies {
	testImplementation platform('org.junit:junit-bom:5.10.0')
	testImplementation 'org.junit.jupiter:junit-jupiter'
	implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.3.jre8'
	implementation 'com.google.code.gson:gson:2.10.1'
	implementation 'org.json:json:20230227'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
	implementation 'org.springframework.boot:spring-boot-starter-json'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.mongodb:mongodb-driver-sync:4.9.0'
	implementation 'org.mongodb:mongodb-driver-core:4.9.0'
	implementation 'org.mongodb:bson:4.9.0'
	implementation 'org.springframework.security:spring-security-crypto:6.2.1'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Pour l'intégration avec Jackson
	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'com.googlecode.lanterna:lanterna:3.1.1'
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'
}
tasks.named('test') {
	useJUnitPlatform()
}
springBoot {
	mainClass = 'be.helha.labos.crystalclash.server_auth.CrystalClashApplication'
}
springBoot {
  mainClass = 'be.helha.labos.crystalclash.server_auth.CrystalClashApplication'
}
